cd/prd/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: web
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      run: web
  template:
    metadata:
      labels:
        run: web
    spec:
      containers:
      - image: ${DEPLOYMENT_CONTAINER_IMAGE}
        name: web
        ports:
        - containerPort: 80
          protocol: TCP
