cd/prd/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: web
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    run: web
  type: NodePort
